--- a/modules/billing_individual/locale/fr_FR.po
+++ b/modules/billing_individual/locale/fr_FR.po
@@ -871,7 +871,7 @@ msgstr "Cash"
 
 msgctxt "selection:billing.payment_method,payment_mode:"
 msgid "Check"
-msgstr ""
+msgstr "Chèque"
 
 msgctxt "selection:billing.payment_method,payment_mode:"
 msgid "Direct Debit"
